[package]
name = "ur-script"
version = "0.1.0"
authors = ["Liam L"]
edition = "2021"
description = "UR e-series controller written in rust. Designed to be deployable on embedded systems without access to std."
readme = "README.md"
repository = "https://github.com/Spodeian/URScript"
keywords = ["e-series", "PolyScope", "Universal-Robots", "UR", "URScript"]
catagories = ["concurrency", "data-structures", "embedded", "no-std", "science::robotics"]
# exclude = ["/benches", "/examples", "/tests"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = {version = "0.4.0", default-features = false}
nalgebra = {version = "0.31.4", default-features = false}
# ascii = "1.1.0"

[badges]
maintenance = {status = "actively-developed"}

[features]
default = ["libm"]
std = ["num/std", "nalgebra/std"]
libm = ["num/libm", "nalgebra/libm"]
# alloc = ["num/alloc", "nalgebra/alloc"]
# tcp = []

[profile.release]
lto = true
codegen-units = 1
strip = true
# target-cpu = "native"
# panic = "abort"
